# chesspp

./: .gitignore  CMakeLists.txt  README.md
include/: ab_tt.h  alpha_beta.h  chess_engine.h  evaluation.h  minimax.h  transposition_table.h  web_server.h
src/: ab_tt.cpp  alpha_beta.cpp  chess_engine.cpp  evaluation.cpp  main.cpp  minimax.cpp  transposition_table.cpp  web_server.cpp
